--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@reduxjs/toolkit": "^2.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-multi-date-picker": "^4.5.2",
     "react-redux": "^9.2.0",
-    "react-toastify": "^11.0.5"
+    "react-responsive": "^10.0.1",
+    "react-toastify": "^11.0.5",
+    "sass": "^1.86.3"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.4",
-    "tailwindcss": "^4.1.4",
     "@types/node": "^22.14.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
