--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-multi-date-picker": "^4.5.2",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-toastify": "^11.0.5",
-    "sass": "^1.86.3"
+    "sass": "^1.86.3",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
