--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-toastify": "^11.0.5",
+    "react-window": "^1.8.11",
     "sass": "^1.86.3",
     "yup": "^1.6.1"
   },
@@ -26,6 +27,7 @@
     "@types/node": "^22.14.1",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
     "@vitejs/plugin-react": "^4.3.4",
